# school-agents

./: .dockerignore  Dockerfile  Your First AI Agent System:Deployments.md  Your First AI Agent System:Your AI Study Buddy & Function calls.md  Your First AI Agent System:Your AI Study Buddy & The First Steps to Agent Creation-blog.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py
src/agents/studdy_buddy/: agent.py  agent_config.yml  auto_tool_loader.py
src/agents/studdy_buddy/prompts/: studdy_buddy_math_visuallization.md  studdy_buddy_notepad.md  study_buddy_google_search.md  study_buddy_prompt.md
src/agents/studdy_buddy/tools/: __init__.py  calculator.py  math_visualizer.py  student_manager.py
src/api/: __init__.py  api_server.py
src/api/templates/: index.html
src/resources/: student.json
